[package]
name = "rust-code"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.16.0"
lol_alloc = "0.4.1"
num-rational = { path = "num-rational" }
plotters = "0.3.7"
plotters-canvas = "0.3.1"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["HtmlCanvasElement"] }
